[package]
name = "chess-core"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = "fat"
codegen-units = 1
target_cpu = "native"
panic = "abort"


[dependencies]
lazy_static = "1.4.0"
rand = "0.8.5"
num-traits = "0.2.15"